After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 730003 - core: Fix reference to renamed functions
core: Fix reference to renamed functions
Status: RESOLVED FIXED
Product: grilo
Classification: Other
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: grilo-maint
grilo-maint
Depends on:
Blocks:
 
 
Reported: 2014-05-12 11:12 UTC by Bastien Nocera
Modified: 2014-05-14 22:24 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
core: Fix reference to renamed functions (1.41 KB, patch)
2014-05-12 11:12 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2014-05-12 11:12:32 UTC
.
Comment 1 Bastien Nocera 2014-05-12 11:12:41 UTC
Created attachment 276373 [details] [review]
core: Fix reference to renamed functions

GrlMetadataSource doesn't exist any more.