core: Fix reference to renamed functions

GrlMetadataSource doesn't exist any more.

https://bugzilla.gnome.org/show_bug.cgi?id=730003